# ai-status-hub

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  SUPPORT.md  docker-compose.yml  index.html  last_run.json  monitor.py  pyproject.toml  robots.txt  services.json  sitemap.xml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  monitor.yml
data/: monitor.db
docs/: API.md  ROADMAP.md  SELF_HOST.md  SOURCES.md
examples/: consume-json.py  github-action.yml
output/: events.ndjson  last_run.json
public/: index.html
reports/: daily-report-2026-06-19.json  daily-report-2026-06-19.md  daily-report-2026-06-20.json  daily-report-2026-06-20.md  daily-report-2026-06-21.json  daily-report-2026-06-21.md  daily-report-2026-06-22.json  daily-report-2026-06-22.md  daily-report-2026-06-23.json  daily-report-2026-06-23.md  daily-report-2026-06-24.json  daily-report-2026-06-24.md  daily-report-2026-06-25.json  daily-report-2026-06-25.md  daily-report-2026-06-26.json  daily-report-2026-06-26.md  daily-report-2026-06-27.json  daily-report-2026-06-27.md  daily-report-2026-06-28.json  daily-report-2026-06-28.md  daily-report-2026-06-29.json  daily-report-2026-06-29.md  daily-report-2026-06-30.json  daily-report-2026-06-30.md  daily-report-2026-07-01.json  daily-report-2026-07-01.md  daily-report-2026-07-02.json  daily-report-2026-07-02.md
schema/: last_run.schema.json
tests/: test_monitor.py
