[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-status-hub"
version = "0.1.0"
description = "Official-source AI provider outage/status monitor for OpenAI, Claude, Gemini, Grok, and AWS."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "JingWen Fan" }
]
keywords = [
  "ai-monitoring",
  "ai-status",
  "outage-monitor",
  "status-dashboard",
  "status-monitor",
  "openai",
  "anthropic",
  "gemini",
  "grok",
  "aws",
  "github-pages",
  "observability"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP :: Site Management",
  "Topic :: System :: Monitoring"
]
dependencies = []

[project.urls]
Homepage = "https://study8677.github.io/ai-status-hub/"
Repository = "https://github.com/study8677/ai-status-hub"
Issues = "https://github.com/study8677/ai-status-hub/issues"
Dashboard = "https://study8677.github.io/ai-status-hub/"

[project.scripts]
ai-status-hub = "monitor:main"

[tool.setuptools]
py-modules = ["monitor"]
